--- a/kdasec.html
+++ b/kdasec.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>kdasrc网</title>
+    <title>⚠️该网页被多用户收藏，请谨慎珍惜！</title>
     <style>
         body, html {
             width:100%;
@@ -62,31 +62,31 @@
 
     <!-- 头部 -->
     <div class="header">
-        <h1>首页</h1>
+        <h1 style="font-size: 42px;">首页</h1>
     </div>
 
     <div class="red-container">
         <!-- 五个彩色长方形框，垂直紧密排列 -->
-        <div class="red-box" onclick="window.location.href='#';">
-            <h1>框1标题</h1>
-            <h2>这里是小标题</h2>
-        </div>
-        <div class="red-box" onclick="window.location.href='#';">
-            <h1>框2标题</h1>
-            <h2>这里是小标题</h2>
-        </div>
-        <div class="red-box" onclick="window.location.href='#';">
-            <h1>框3标题</h1>
-            <h2>这里是小标题</h2>
-        </div>
-        <div class="red-box" onclick="window.location.href='#';">
-            <h1>框4标题</h1>
-            <h2>这里是小标题</h2>
-        </div>
-        <div class="red-box" onclick="window.location.href='#';">
-            <h1>框5标题</h1>
-            <h2>这里是小标题</h2>
-        </div>
+    <div class="red-box" onclick="window.location.href='#';" style="cursor: pointer;">
+  <h1 style="font-size: 70px; text-align: justify; margin-left: 60px;">框1标题</h1>
+  <h2 style="font-size: 30px; text-align: justify; margin-left: 60px;">这里是小标题</h2>
+</div>
+<div class="red-box" onclick="window.location.href='#';" style="cursor: pointer;">
+  <h1 style="font-size: 70px; text-align: justify; margin-left: 60px;">框2标题</h1>
+  <h2 style="font-size: 30px; text-align: justify; margin-left: 60px;">这里是小标题</h2>
+</div>
+<div class="red-box" onclick="window.location.href='#';" style="cursor: pointer;">
+  <h1 style="font-size: 70px; text-align: justify; margin-left: 60px;">框3标题</h1>
+  <h2 style="font-size: 30px; text-align: justify; margin-left: 60px;">这里是小标题</h2>
+</div>
+<div class="red-box" onclick="window.location.href='#';" style="cursor: pointer;">
+  <h1 style="font-size: 70px; text-align: justify; margin-left: 60px;">框4标题</h1>
+  <h2 style="font-size: 30px; text-align: justify; margin-left: 60px;">这里是小标题</h2>
+</div>
+<div class="red-box" onclick="window.location.href='#';" style="cursor: pointer;">
+  <h1 style="font-size: 70px; text-align: justify; margin-left: 60px;">框5标题</h1>
+  <h2 style="font-size: 30px; text-align: justify; margin-left: 60px;">这里是小标题</h2>
+</div>
     </div>
 </body>
 </html>
