--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h3>你好</h3>
+<little>一个不知道的网站</little>
+<style>
+/* 定义按钮的CSS样式 */
+        .button {
+            padding: 10px 20px; /* 内边距 */
+            font-size: 16px; /* 字体大小 */
+            color: white; /* 文字颜色 */
+            background-color: #007BFF; /* 背景颜色 */
+            border: none; /* 边框 */
+            border-radius: 5px; /* 边框圆角 */
+            cursor: pointer; /* 鼠标悬停时的光标形状 */
+            transition: background-color 0.3s; /* 背景颜色变化的过渡效果 */
+        }
+        /* 鼠标悬停时改变按钮颜色 */
+        .button:hover {
+            background-color: #0056b3;
+        }
+</style>
+        <!-- 带有样式的<a>标签按钮 -->
+    <a href="kdasec.html" class="button">跳转到Example.com</a>
