--- a/kdasec.html
+++ b/kdasec.html
@@ -4,21 +4,6 @@
     <meta charset="UTF-8">
     <title>⚠️该网页被多用户收藏，请谨慎珍惜！</title>
     <style>
-          /* 定义按钮的CSS样式 */
-        .button {
-            padding: 10px 20px; /* 内边距 */
-            font-size: 16px; /* 字体大小 */
-            color: white; /* 文字颜色 */
-            background-color: #007BFF; /* 背景颜色 */
-            border: none; /* 边框 */
-            border-radius: 5px; /* 边框圆角 */
-            cursor: pointer; /* 鼠标悬停时的光标形状 */
-            transition: background-color 0.3s; /* 背景颜色变化的过渡效果 */
-        }
-        /* 鼠标悬停时改变按钮颜色 */
-        .button:hover {
-            background-color: #0056b3;
-        }
         body, html {
             width:100%;
             height: 100%;
@@ -70,6 +55,22 @@
         .red-box:hover {
             transform: scale(1.05);
             z-index: 1; /* 确保放大的盒子在顶部 */
+           
+        }
+        /* 定义按钮的CSS样式 */
+        .button {
+            padding: 10px 20px; /* 内边距 */
+            font-size: 16px; /* 字体大小 */
+            color: white; /* 文字颜色 */
+            background-color: #007BFF; /* 背景颜色 */
+            border: none; /* 边框 */
+            border-radius: 5px; /* 边框圆角 */
+            cursor: pointer; /* 鼠标悬停时的光标形状 */
+            transition: background-color 0.3s; /* 背景颜色变化的过渡效果 */
+        }
+        /* 鼠标悬停时改变按钮颜色 */
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -77,9 +78,9 @@
 
     <!-- 头部 -->
     <div class="header">
-        <h1 style="font-size: 42px;">首页</h1>
-            <!-- 带有样式的<a>标签按钮 -->
-    <a href="index.html" class="button">跳转到Example.com</a>
+        <h1 style="font-size: 42px;">首页    <!-- 带有样式的<a>标签按钮 -->
+    <a href="index.html" class="button">返回主页</a></h1>
+        
     </div>
 
     <div class="red-container">
