--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
         }
 </style>
         <!-- 带有样式的<a>标签按钮 -->
-    <a href="kdasec.html" class="button">跳转到Example.com</a>
+    <a href="kdasec.html" class="button">曾鸡样的分享</a>
