--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ document.addEventListener('DOMContentLoaded', function() {
 </header>
     <div id="main">
       <div class="brand" id="logo">
-        <span>风羽搜集站 
-        </span><span class="flag">一个人的网站</span>
+        <span>风羽搜集站 | 曾鸡样的网站
+        </span><span class="flag">分享发布页</span>
       </div>
       <div class="field">
         <div class="enter-maomi">
@@ -178,7 +178,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 //window.location=url[ints];//新窗口打开 
               }
             </script>
-            <a href="javascript:test()"><span class="c_blue">曾鸡样的分享</span> </a>
+            <a href="javascript:test()"><span class="c_blue">点击这里进入本网站</span> </a>
           </div>
         </div>
         <p class="c_blue c_link">最新地址➊：<a href="kdasec.html" target="_blank">https://fengyu-com.github.io/kdasec.html</a></p>
@@ -192,7 +192,6 @@ document.addEventListener('DOMContentLoaded', function() {
           <li><a>希望大家能学会发送邮件获取新地址</a></li>
         </ul>
       </div>
-      <div class="field ">
 
       <div class="field desc">
         <h4 class="title">✐ 溫馨提示</h4>
@@ -205,5 +204,11 @@ document.addEventListener('DOMContentLoaded', function() {
         </ul>
       </div>
     </div>
+          <div class="field ">
+        <h4 class="title">网站信息</h4>
+        <ul>
+          <li>网站持有者Feng Yu 注册 <br>阳江备案局C2024&©️版权所有</a><br>&</li>
+        </ul>
+      </div>
   </body>
 </html>
