--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -213,9 +213,10 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="field ">
         <h4 class="title">加入我们</h4>
         <ul>
-          <li>背景、颜色、排板、样式…</a></li>
+          <li>加入我们的团队并获取联系方式，共同创作更优质的产品</a></li>
         </ul>
-          <div class="field ">
+        </div>
+      <div class="field ">
         <h4 class="title">网站备案信息</h4>
         <ul>
           <li>网站持有者Feng Yu 注册 <br>阳江备案局C2024&©️版权所有</a><br>&</li>
