--- a/login/index.html
+++ b/login/index.html
@@ -24,7 +24,7 @@
 
         <div class="formLeft">
 
-            <img src="images/avatar.png">
+            <img src="https://pic.imgdb.cn/item/66aba36fd9c307b7e9807d60.jpg">
 
         </div>
 
