--- a/login/002.html
+++ b/login/002.html
@@ -3222,7 +3222,7 @@ button:focus {
 
     <div class="subtitle">哎呀。看来你拐错弯了。</div>
 
-     <a href="https://soujiz.com/"><button>返回</button></a>
+     <a href="index.html"><button>返回</button></a>
 
   </div>
 
@@ -3238,7 +3238,7 @@ function refer(){
 
  if(t==0){ 
 
- location.href="https://soujiz.com/";
+ location.href="index.html";
 
  } 
 
